--- a/state-query/pom.xml
+++ b/state-query/pom.xml
@@ -86,6 +86,10 @@
 						</goals>
 						<configuration>
 							<transformers>
+								<transformer
+										implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>reference.conf</resource>
+								</transformer>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>com.dataartisans.statequery.AkkaStateQuery</mainClass>
 								</transformer>
